# FakeMinecraft

./: CMakeLists.txt  Headers.hpp  README.md  TODO.txt  fragmentShader.frag  main.cpp  vertexShader.vert
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  perlinNoise.data.json  perlinNoise.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
Game/: CMakeLists.txt
Game/Include/: Block.hpp  Camera.hpp  Game.hpp  InputController.hpp  Player.hpp  ResourceLoader.hpp  Shader.hpp  Utilities.hpp  Vector3f.hpp  World.hpp
Game/Include/GameTemp/: Camera.hpp  Game.hpp  World.hpp
Game/src/: Block.cpp  Camera.cpp  Game.cpp  InputController.cpp  Player.cpp  ResourceLoader.cpp  Shader.cpp  Utilities.cpp  Vector3f.cpp  World.cpp
Game/src/GameTemp/: Game.cpp  Player.cpp  World.cpp
Include/: Headers.hpp  classes.hpp  externs.hpp  functions.hpp  shader.h
Include/Bullet/LinearMath/: btIDebugDraw.h
Include/MyClasses/: Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Enemy.cpp  Enemy.hpp  InputController.cpp  InputController.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  VectorOperations.cpp  VectorOperations.hpp  World.cpp  World.hpp  materials.h
Include/MyFunctions/: dealWithCollisions.cpp  dealWithCollisions.hpp  drawAxis.cpp  drawAxis.hpp  drawScreen.cpp  drawScreen.hpp  eventHandling.cpp  eventHandling.hpp  finishBullet.cpp  initBullet.cpp  initBullet.hpp  initGL.cpp  initShaders.cpp  initShaders.hpp  initVO.cpp  initVO.hpp  initValues.cpp  initValues.hpp  mouseHandling.cpp  mouseHandling.hpp  placingAndRemovingBlocks.cpp  placingAndRemovingBlocks.hpp  playerShoot.cpp  playerShoot.hpp  reRenderWorld.cpp  reRenderWorld.hpp  reshapeScreen.cpp  reshapeScreen.hpp  setMaterial.cpp  setMaterial.hpp  update.cpp  vectorOperations.cpp  vectorOperations.hpp
Include/general/: Headers.hpp  classes.hpp  externs.hpp  functions.hpp
include/MyClasses/: Enemy.cpp  Shader.hpp  World.cpp  World.hpp
include/MyFunctions/: drawScreen.cpp  finishBullet.hpp  initGL.hpp  initValues.cpp  vectorOperations.hpp
include/general/: Headers.hpp  classes.hpp
resources/shaders/: blockShader.frag  blockShader.vert
shaders/: blocksShader.frag  blocksShader.vert  fragmentShader.frag  playerShader.frag  playerShader.vert  vertexShader.vert
src/: Block.cpp  Camera.cpp  Enemy.cpp  InputController.cpp  Player.cpp  Shader.cpp  World.cpp  bullet_src.cpp  dealWithCollisions.cpp  drawScreen.cpp  eventHandling.cpp  finishBullet.cpp  initBullet.cpp  initGL.cpp  initValues.cpp  mouseHandling.cpp  playerShoot.cpp  reshapeScreen.cpp  update.cpp  vectorOperations.cpp
